--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "wayfarers",
   "version": "1.0.0",
   "description": "Web App that allows users to post locations they have been to",
-  "main": "src/app.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
