--- a/src/package.json
+++ b/src/package.json
@@ -23,9 +23,12 @@
   },
   "homepage": "https://github.com/SpiralStatic/wayfarers#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.5",
     "express": "^4.14.1",
     "express-ejs-layouts": "^2.2.0",
+    "express-session": "^1.15.1",
     "mongoose": "^4.8.2"
   },
   "devDependencies": {
