--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "Web App that allows users to post locations they have been to",
     "main": "app.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "postinstall": "cd src"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
         "type": "git",
